worked on the vignette for the LIML and Fuller
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@216 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/momentfit/vignettes/empir.bib
+++ b/pkg/momentfit/vignettes/empir.bib
@@ -1,3 +1,31 @@
+@book{davidson-mackinnon04,
+author = {Davidson, R. and MacKinnon, J. G.},
+title = {Econometric Theory and Methods},
+year = {2004},
+publisher = {Oxford University Press},
+address = {New York}
+} 
+
+
+@article{fuller77,
+  AUTHOR={Fuller, W. A.},
+  TITLE={Some Properties of a Modification of the Limited Information Estimator},
+  JOURNAL={Econometrica},
+  VOLUME={45},
+  PAGES={939--953},
+  YEAR={1977}
+ } 
+
+
+@Manual{ivmodel,
+    title = {ivmodel: Statistical Inference and Sensitivity Analysis for Instrumental
+Variables Model},
+    author = {Hyunseung Kang and Yang Jiang and Qingyuan Zhao and Dylan Small},
+    year = {2023},
+    note = {R package version 1.9.1},
+    url = {https://CRAN.R-project.org/package=ivmodel},
+  }
+
 
 @article{jagannathan-skoulakis02,
   AUTHOR={Jagannathan, R. and Skoulakis, G.},
