added the Sanderson and Windmeijer (2016) test for weak instruments
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@219 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/momentfit/vignettes/empir.bib
+++ b/pkg/momentfit/vignettes/empir.bib
@@ -1,3 +1,56 @@
+@article{montiel-olea-pflueger13,
+  AUTHOR={Montiel Olea, J. and Pflueger, C.},
+  TITLE={A robust test for weak instruments},
+  JOURNAL={Journal of Business and Economic Statistics},
+  VOLUME={31},
+  PAGES={358--369},
+  YEAR={2013}
+ } 
+
+@article{sanderson-windmeijer16,
+  AUTHOR={Sanderson, E. and Windmeijer, F.},
+  TITLE={A weak instrument F-test in linear IV models with multiple
+  endogenous variables},
+  JOURNAL={Journal of Econometrics},
+  VOLUME={190},
+  PAGES={212--221},
+  YEAR={2016}
+ } 
+
+
+
+@article{nagar59,
+  AUTHOR={Nagar, A.L.},
+  TITLE={Testing Identifiability and Specification in Instrumental Variable Models},
+  JOURNAL={Econometrica},
+  VOLUME={27},
+  PAGES={575--595},
+  YEAR={1959}
+ } 
+
+
+@article{cragg-donald93,
+  AUTHOR={Cragg, J.G. and Donald, S.G.},
+  TITLE={Testing Identifiability and Specification in Instrumental Variable Models},
+  JOURNAL={Econometric Theory},
+  VOLUME={9},
+  PAGES={222--240},
+  YEAR={1993}
+ } 
+
+
+@book{stock-yogo05,
+author = {Stock, J.H. and Yogo, M.},
+title = {Testing for weak instruments in linear IV regression. In Identification and Inference for
+Econometric Models: Essays in Honor of Thomas Rothenberg.},  
+year = {2005},
+publisher = {Cambridge University Press},
+edition = {Edited by Donald W. K. Andrews and James H. Stock},
+address = {Cambridge},
+pages={80--108}
+} 
+
+
 @book{davidson-mackinnon04,
 author = {Davidson, R. and MacKinnon, J. G.},
 title = {Econometric Theory and Methods},
