started to add Montiel Olea and Pflueger 2013 test for weak instruments
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@220 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/momentfit/vignettes/empir.bib
+++ b/pkg/momentfit/vignettes/empir.bib
@@ -7,6 +7,17 @@
   YEAR={2013}
  } 
 
+@article{andrews-stock-sun19,
+  AUTHOR={Andrews, I. and Stock, J.H. and Sun, L.},
+  TITLE={Weak Instruments in Intrumental Variables Regression:
+  Theory and Practice},
+  JOURNAL={Annual Review of Economics},
+  VOLUME={11},
+  PAGES={727--753},
+  YEAR={2019}
+ } 
+
+
 @article{sanderson-windmeijer16,
   AUTHOR={Sanderson, E. and Windmeijer, F.},
   TITLE={A weak instrument F-test in linear IV models with multiple
